--- a/husapris.ipynb
+++ b/husapris.ipynb
@@ -147,26 +147,7 @@
     "\n",
     "try:  \n",
     "    betriResponse = scrape_page(driver,betriURL)\n",
-    "\n",
-    "    # imgElements = driver.find_elements(By.CLASS_NAME, 'slides')\n",
-    "    # for imgElement in imgElements:\n",
-    "    #     if imgElement is not None:\n",
-    "    #         firstPhoto = imgElement.find_element(By.ID, 'data-slider-id')\n",
-    "    #         urlelement = firstPhoto.find_element(By.TAG_NAME, 'img')\n",
-    "    #         if urlelement:\n",
-    "    #             image_url = urlelement.get_attribute('src')\n",
-    "    #             print(image_url)\n",
-    "\n",
-    "    \n",
     "    skynResponse = scrape_page(driver,skynURL)\n",
-    "    \n",
-    "    imgElements = driver.find_elements(By.CLASS_NAME, 'ogn_thumb')\n",
-    "    for imgElement in imgElements:\n",
-    "        if imgElement is not None:\n",
-    "            urlelement = imgElement.find_element(By.TAG_NAME, 'img')\n",
-    "            if urlelement:\n",
-    "                image_url = urlelement.get_attribute('src')\n",
-    "                skynimgs.append(image_url)\n",
     "finally:\n",
     "    driver.quit()     \n",
     "\n",
@@ -476,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1015,
+   "execution_count": 1032,
    "id": "6b3302cc-0378-469f-99e3-e74f0105f6ff",
    "metadata": {
     "editable": true,
@@ -485,7 +466,64 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordoyggjar/Gardavegur_50_Klaksvik/IMG_2530.jpeg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/I_Palslida_2og4_nordragota/01.bmp&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/lydarsvegur_48b_toftir/01.JPEG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/I_Palslida_2og4_nordragota/01.bmp&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/I_Palslida_2og4_nordragota/01.bmp&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/I_Palslida_2og4_nordragota/01.bmp&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/undir_ryggi_12/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Liljugota_7/01v.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sandoy-og-Skuvoy/Leirviksvegur_9_Skopun/01v.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/landavegur_61/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordstreymoy/i_homrum_25_kollafjordur/02v.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Niels_Finsens_gota_23A_nyta_hetta/01v.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Kaldbak/vid_krossa_6/01v.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/nidari_vegur_78_skipanes/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/matrnr_58a_oyri/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Vagar/handan_a_ 4_mykines/03.JPEG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sandoy-og-Skuvoy/hagabrekka_28_skalavik/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Suduroy/geilin_33_vagur/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Vagar/matrnr_208p_midvagur/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Hjaltarok_4_torshavn/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Vagar/ovastuhjallar_9_sandavagur/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/matrnr1350a/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/salvaravegur_9/01_1.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Suduroy/matr_31_ordavik/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordoyggjar/klaksviksvegur_59_klaksvik/01.JPEG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordoyggjar/matr_144i_Klaksvik/Myndir/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nolsoy-og-Hestoy/Valagøta_13_grundøki_Nolsoy/01-2.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordstreymoy/matrnr.21f_leynar/IMG_1011.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/matr.nr.240a_240g_skala/kopi 3.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordoyggjar/Tradagota_37_Klaksvik_/1.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/Olavsvegur_6_toftir/10.JPEG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/matr_434a_eidi/03.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/gripsvegur_33/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/trondargota_55/01vv.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Suduroy/biarvegur_107_hvalba/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Ibudinar_a_Silagotu/0.2/02_0v.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/matr.12a_nordskala/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Hoyvik/Torkilsgota_7/01v.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Suduroy/Sjogota_178_Tvoroyri/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/kongagota_3/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/heidastubbi_8/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Heidastubbi_5/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Ibudinar_a_Silagotu/0.3/02_0v.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Meinhartstrød_9_Tórshavn/IMG_4053.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Oksnagerdi_8/01.PNG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Vagar/steigartun_13_sandavagur/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Argir/heidagota_7a/01.JPG&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/ryskigota_34/01.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/vesturgota_22_1.2/10_0v.jpg&Width=360&Height=248&Crop=6\n",
+      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Ryskigota_41/01.jpg&Width=360&Height=248&Crop=6\n"
+     ]
+    }
+   ],
    "source": [
     "def skynPropertyScraper(SkynPropertyWrappers,slag):\n",
     "    for property in SkynPropertyWrappers:\n",
@@ -520,6 +558,17 @@
     "        floorEntry = None if floors == '−' else floors\n",
     "        yearBuilt = div_elements[3].get_text(strip=True)\n",
     "        yearBuiltEntry = None if yearBuilt == '−' else yearBuilt\n",
+    "\n",
+    "        # Find the first <li> element with class \"slide\"\n",
+    "        first_slide = property.find('div', class_='ogn_thumb')\n",
+    "        if first_slide:\n",
+    "        #     # Find the <img> element within the first slide\n",
+    "            img_element = first_slide.find('img')\n",
+    "        if img_element:\n",
+    "            # Extract the 'src' attribute from the <img> element\n",
+    "            image_url = img_element['src']\n",
+    "            print(\"https://www.skyn.fo\"+image_url)\n",
+    "            # betriimgs.append(image_url)\n",
     "        \n",
     "        \n",
     "        prop = FaroesProperties(websites, address, houseNum, city, postNum,\n",
@@ -528,13 +577,7 @@
     "\n",
     "        properties.append(prop)\n",
     "\n",
-    "        # imgElement = CheckValueText(property, 'div', \"ogn_thumb\")\n",
-    "        # print(imgElement)\n",
-    "        # if imgElement is not None:\n",
-    "        #     urlelement = imgElement.find('a')\n",
-    "        #     if urlelement:\n",
-    "        #         image_url = urlelement['href']\n",
-    "        #         print(image_url)\n",
+    "       \n",
     "\n",
     "skynPropertyScraper(SkynPropertyWrappers,\"Skyn\")\n",
     "skynPropertyScraper(SkynPropertyWrappersSold,\"Skyn: Selt\")\n",
