--- a/husapris.ipynb
+++ b/husapris.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1002,
+   "execution_count": 1034,
    "id": "5c04c16a-745f-4f08-a282-c34acdd17555",
    "metadata": {
     "editable": true,
@@ -42,8 +42,8 @@
     "                 city=None, postNum=None,\n",
     "                 price=None,LatesPrice=None, validDate=None,\n",
     "                 date=None, buildingSize=None,\n",
-    "                 landSize=None, room=None,\n",
-    "                 floor=None):\n",
+    "                 landSize=None, room=None, floor=None,\n",
+    "                 img=None):\n",
     "        if website is None:\n",
     "            self.websites = \"None\"\n",
     "        self.websites = website\n",
@@ -95,6 +95,10 @@
     "        if floors is None:\n",
     "            self.floors = \"None\"\n",
     "        self.floors = floor\n",
+    "\n",
+    "        if img is None:\n",
+    "            self.imgs = \"None\"\n",
+    "        self.imgs = img\n",
     "                     \n",
     "    def display(self):\n",
     "        print(\"Heimasída: \", self.websites, \n",
@@ -109,6 +113,7 @@
     "              \"\\nm2 í húsinum: \", self.buildingSizes,\"\\nm2 á økinum: \", self.landSizes,\n",
     "              \"\\nRúm: \", self.rooms,\n",
     "              \"\\nHæddir: \", self.floors, \n",
+    "              \"\\nURL img \", self.imgs,\n",
     "              \"\\n\")\n",
     "    def writeToCSV(self):\n",
     "        print(\"test\")"
@@ -116,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1003,
+   "execution_count": 1035,
    "id": "726761f6-d73e-482e-94fd-541d65403571",
    "metadata": {
     "editable": true,
@@ -316,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1025,
+   "execution_count": 1036,
    "id": "8c244913-5a8e-475b-b958-00d4cdd50aa4",
    "metadata": {
     "editable": true,
@@ -379,7 +384,7 @@
     "\n",
     "    prop = FaroesProperties(websites, address, houseNum, city, postNum,\n",
     "                            priceEntries,latestPriceOfferEntries, priceOfferValidDateEntry,yearBuiltEntry,insideM2Entry,\n",
-    "                            outsideM2Entry,roomEntry,floorEntry)\n",
+    "                            outsideM2Entry,roomEntry,floorEntry,image_url)\n",
     "    \n",
     "    \n",
     "    properties.append(prop)\n"
@@ -387,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1012,
+   "execution_count": 1037,
    "id": "ef673811-eb57-420d-b273-a4f640d19297",
    "metadata": {
     "editable": true,
@@ -457,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1032,
+   "execution_count": 1039,
    "id": "6b3302cc-0378-469f-99e3-e74f0105f6ff",
    "metadata": {
     "editable": true,
@@ -466,64 +471,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordoyggjar/Gardavegur_50_Klaksvik/IMG_2530.jpeg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/I_Palslida_2og4_nordragota/01.bmp&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/lydarsvegur_48b_toftir/01.JPEG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/I_Palslida_2og4_nordragota/01.bmp&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/I_Palslida_2og4_nordragota/01.bmp&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/I_Palslida_2og4_nordragota/01.bmp&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/undir_ryggi_12/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Liljugota_7/01v.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sandoy-og-Skuvoy/Leirviksvegur_9_Skopun/01v.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/landavegur_61/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordstreymoy/i_homrum_25_kollafjordur/02v.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Niels_Finsens_gota_23A_nyta_hetta/01v.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Kaldbak/vid_krossa_6/01v.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/nidari_vegur_78_skipanes/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/matrnr_58a_oyri/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Vagar/handan_a_ 4_mykines/03.JPEG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sandoy-og-Skuvoy/hagabrekka_28_skalavik/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Suduroy/geilin_33_vagur/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Vagar/matrnr_208p_midvagur/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Hjaltarok_4_torshavn/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Vagar/ovastuhjallar_9_sandavagur/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/matrnr1350a/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/salvaravegur_9/01_1.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Suduroy/matr_31_ordavik/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordoyggjar/klaksviksvegur_59_klaksvik/01.JPEG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordoyggjar/matr_144i_Klaksvik/Myndir/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nolsoy-og-Hestoy/Valagøta_13_grundøki_Nolsoy/01-2.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordstreymoy/matrnr.21f_leynar/IMG_1011.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/matr.nr.240a_240g_skala/kopi 3.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Nordoyggjar/Tradagota_37_Klaksvik_/1.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/Olavsvegur_6_toftir/10.JPEG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/matr_434a_eidi/03.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/gripsvegur_33/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/trondargota_55/01vv.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Suduroy/biarvegur_107_hvalba/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Ibudinar_a_Silagotu/0.2/02_0v.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Eysturoy/matr.12a_nordskala/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Hoyvik/Torkilsgota_7/01v.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Suduroy/Sjogota_178_Tvoroyri/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/kongagota_3/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/heidastubbi_8/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Heidastubbi_5/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Ibudinar_a_Silagotu/0.3/02_0v.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Meinhartstrød_9_Tórshavn/IMG_4053.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Oksnagerdi_8/01.PNG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Vagar/steigartun_13_sandavagur/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Argir/heidagota_7a/01.JPG&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/ryskigota_34/01.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/vesturgota_22_1.2/10_0v.jpg&Width=360&Height=248&Crop=6\n",
-      "https://www.skyn.fo/admin/public/getimage.ashx?&Image=/Files/Images/Ognir/Sudurstreymoy/Torshavn/Ryskigota_41/01.jpg&Width=360&Height=248&Crop=6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def skynPropertyScraper(SkynPropertyWrappers,slag):\n",
     "    for property in SkynPropertyWrappers:\n",
@@ -567,13 +515,14 @@
     "        if img_element:\n",
     "            # Extract the 'src' attribute from the <img> element\n",
     "            image_url = img_element['src']\n",
-    "            print(\"https://www.skyn.fo\"+image_url)\n",
+    "            imgUrl = str(\"https://www.skyn.fo\"+image_url)\n",
     "            # betriimgs.append(image_url)\n",
+    "            skynimgs.append(\"https://www.skyn.fo\"+image_url)\n",
     "        \n",
     "        \n",
     "        prop = FaroesProperties(websites, address, houseNum, city, postNum,\n",
     "                            priceEntries,latestPriceOfferEntries, priceOfferValidDateEntry,yearBuiltEntry,insideM2Entry,\n",
-    "                            outsideM2Entry,roomEntry,floorEntry)\n",
+    "                            outsideM2Entry,roomEntry,floorEntry,imgUrl)\n",
     "\n",
     "        properties.append(prop)\n",
     "\n",
@@ -596,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 983,
+   "execution_count": 1041,
    "id": "262e96ac-78f4-4c9d-8f68-7baedc96deba",
    "metadata": {
     "editable": true,
@@ -621,7 +570,8 @@
     "           'insidem2', \n",
     "           'outsidem2', \n",
     "           'roomqty', \n",
-    "           'floorlevels'\n",
+    "           'floorlevels',\n",
+    "           'img_urls'\n",
     "          ]\n",
     "writer.writerow(headers)\n",
     "for prop in properties:\n",
@@ -639,7 +589,8 @@
     "                prop.buildingSizes, \n",
     "                prop.landSizes, \n",
     "                prop.rooms, \n",
-    "                prop.floors\n",
+    "                prop.floors,\n",
+    "                prop.imgs\n",
     "               ])\n",
     "    writer.writerow(headers)\n",
     "    file.close()\n"
