--- a/husapris.ipynb
+++ b/husapris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1001,
+   "execution_count": 1091,
    "id": "4e2a16d3-08a3-479e-a580-bbb5ed4cb4ad",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,9 @@
     "import csv\n",
     "from datetime import datetime\n",
     "import os\n",
+    "\n",
+    "from PIL import Image\n",
+    "from io import BytesIO\n",
     "\n",
     "import time\n",
     "# from selenium import webdriver\n",
@@ -25,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1034,
+   "execution_count": 1092,
    "id": "5c04c16a-745f-4f08-a282-c34acdd17555",
    "metadata": {
     "editable": true,
@@ -116,12 +119,19 @@
     "              \"\\nURL img \", self.imgs,\n",
     "              \"\\n\")\n",
     "    def writeToCSV(self):\n",
-    "        print(\"test\")"
+    "        print(\"test\")\n",
+    "        \n",
+    "    def getImgUrl(self):\n",
+    "        if self.imgs != \"None\":\n",
+    "            return str(self.imgs)\n",
+    "    def getName(self):\n",
+    "        if self.addresses != \"None\" and self.houseNums != \"None\":\n",
+    "            return str(self.cities+_+self.addresses+self.houseNums)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1035,
+   "execution_count": 1093,
    "id": "726761f6-d73e-482e-94fd-541d65403571",
    "metadata": {
     "editable": true,
@@ -168,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1004,
+   "execution_count": 1094,
    "id": "109631fb-3c06-4982-9db8-ec9156c500ec",
    "metadata": {
     "editable": true,
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1005,
+   "execution_count": 1095,
    "id": "b6401455-0573-4f7b-9d80-34ac2fd438d4",
    "metadata": {},
    "outputs": [],
@@ -207,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1006,
+   "execution_count": 1096,
    "id": "332a03a4-a8da-431d-a523-220ba7fed9a4",
    "metadata": {},
    "outputs": [],
@@ -235,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1007,
+   "execution_count": 1097,
    "id": "a2799142-09e6-43c0-be7e-d258b724f577",
    "metadata": {},
    "outputs": [],
@@ -251,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1008,
+   "execution_count": 1098,
    "id": "57fe8a8c-1a6c-46ac-aca3-4fb2a31581e5",
    "metadata": {},
    "outputs": [],
@@ -267,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1009,
+   "execution_count": 1099,
    "id": "5b45f260-7897-401c-ab78-31c1ed07e8a2",
    "metadata": {},
    "outputs": [],
@@ -305,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1010,
+   "execution_count": 1100,
    "id": "eb086590-919c-44f5-9ff1-41d4a8fa8ed8",
    "metadata": {},
    "outputs": [],
@@ -321,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1036,
+   "execution_count": 1101,
    "id": "8c244913-5a8e-475b-b958-00d4cdd50aa4",
    "metadata": {
     "editable": true,
@@ -392,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1037,
+   "execution_count": 1102,
    "id": "ef673811-eb57-420d-b273-a4f640d19297",
    "metadata": {
     "editable": true,
@@ -420,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1013,
+   "execution_count": 1103,
    "id": "646f7426-257a-4650-89d4-ffc3e1327a5f",
    "metadata": {},
    "outputs": [],
@@ -436,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1014,
+   "execution_count": 1104,
    "id": "446ef0af-be4f-48e3-b7c6-f8114169c0f2",
    "metadata": {
     "editable": true,
@@ -462,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1039,
+   "execution_count": 1105,
    "id": "6b3302cc-0378-469f-99e3-e74f0105f6ff",
    "metadata": {
     "editable": true,
@@ -598,8 +608,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1106,
    "id": "34ac462f-0d95-4002-9cd4-4be753948064",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image saved as TórshavnHeimaratún 3.jpeg\n",
+      "Image saved as VelbastaðurGerðisbreyt 3.jpeg\n",
+      "Image saved as TórshavnGrásteinsgøta 2B.jpeg\n",
+      "Image saved as FuglafjørðurKráarvegur 20.jpeg\n",
+      "Image saved as SørvágurLiðabrekkan 15.jpeg\n",
+      "Image saved as SandavágurSteigarbrekka 14.jpeg\n",
+      "Image saved as SkopunGarðavegur 12.jpeg\n",
+      "Image saved as TórshavnStoffalág 59.jpeg\n",
+      "Image saved as KlaksvíkGarðavegur 70.jpeg\n",
+      "Image saved as VágurBøgøta 30.jpeg\n",
+      "Image saved as HoyvíkKarlamagnusarbreyt 44.jpeg\n",
+      "Image saved as SaltangaráÆrgisbrekka 1.jpeg\n",
+      "Image saved as TórshavnNiels Winthersgøta 9.jpeg\n",
+      "Image saved as OyrarbakkiNeyst Matr nr 141.jpeg\n",
+      "Image saved as MiðvágurMatr nr 13d.jpeg\n",
+      "Image saved as VelbastaðurGrundstykki  176.jpeg\n",
+      "Image saved as SignabøurNeyst - matr. 283e.jpeg\n",
+      "Image saved as KlaksvíkGarðavegur 50.jpeg\n",
+      "Image saved as NorðragøtaÍbúð 1.jpeg\n",
+      "Image saved as ToftirLýðarsvegur 48B.jpeg\n",
+      "Image saved as NorðragøtaÍbúð 2.jpeg\n",
+      "Image saved as NorðragøtaÍbúð 3.jpeg\n",
+      "Image saved as NorðragøtaÍbúð 4.jpeg\n",
+      "Image saved as TórshavnUndir Ryggi 12.jpeg\n",
+      "Image saved as TórshavnLiljugøta 7.jpeg\n",
+      "Image saved as SkopunLeirvíksvegur 9.jpeg\n",
+      "Image saved as TórshavnLandavegur 61.jpeg\n",
+      "Image saved as Kollafjørðurí Homrum 25.jpeg\n",
+      "Image saved as TórshavnNiels Finsens gøta 23A.jpeg\n",
+      "Image saved as Kaldbakvið Krossá 6.jpeg\n",
+      "Image saved as SkipanesNiðari Vegur 78.jpeg\n",
+      "Image saved as Oyrarbakkimatr.nr. 58a.jpeg\n",
+      "Image saved as MykinesHandan Á 4.jpeg\n",
+      "Image saved as SkálavíkHagabrekka 28.jpeg\n",
+      "Image saved as VágurGeilin 33.jpeg\n",
+      "Image saved as Miðvágurmatr.nr. 208p.jpeg\n",
+      "Image saved as TórshavnHjaltarók 4.jpeg\n",
+      "Image saved as SandavágurOvastuhjallar 9.jpeg\n",
+      "Image saved as Tórshavnmatr.nr. 1350a.jpeg\n",
+      "Image saved as SyðrugøtaSalvarávegur 9.jpeg\n",
+      "Image saved as Ørðavíkmatr.nr. 31.jpeg\n",
+      "Image saved as KlaksvíkKlaksvíksvegur 59.jpeg\n",
+      "Image saved as Klaksvíkmatr. 144i.jpeg\n",
+      "Image saved as Nólsoymatr.nr. 159d.jpeg\n",
+      "Image saved as Leynarmatr.nr. 21f.jpeg\n",
+      "Image saved as Skálamatr.nr. 240a.jpeg\n",
+      "Image saved as KlaksvíkTraðagøta 37.jpeg\n",
+      "Image saved as ToftirÓlavsvegur 6.jpeg\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"NoneType\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1106], line 11\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m prop \u001b[38;5;129;01min\u001b[39;00m properties:\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# URL of the image\u001b[39;00m\n\u001b[1;32m     10\u001b[0m     image_url \u001b[38;5;241m=\u001b[39m prop\u001b[38;5;241m.\u001b[39mgetImgUrl()\n\u001b[0;32m---> 11\u001b[0m     img_name \u001b[38;5;241m=\u001b[39m \u001b[43mprop\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetName\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;66;03m# Send an HTTP GET request to the image URL\u001b[39;00m\n\u001b[1;32m     14\u001b[0m     response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(image_url)\n",
+      "Cell \u001b[0;32mIn[1092], line 88\u001b[0m, in \u001b[0;36mFaroesProperties.getName\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgetName\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m     87\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maddresses \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhouseNums \u001b[38;5;241m!=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m---> 88\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mstr\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcities\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maddresses\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhouseNums\u001b[49m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"NoneType\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "# Determine the destination folder\n",
+    "folder_path = \"images\"\n",
+    "\n",
+    "# Create the folder if it doesn't exist\n",
+    "if not os.path.exists(folder_path):\n",
+    "    os.makedirs(folder_path)\n",
+    "        \n",
+    "for prop in properties:\n",
+    "    # URL of the image\n",
+    "    image_url = prop.getImgUrl()\n",
+    "    img_name = prop.getName()\n",
+    "\n",
+    "    # Send an HTTP GET request to the image URL\n",
+    "    response = requests.get(image_url)\n",
+    "    \n",
+    "    if response.status_code == 200:\n",
+    "        # Read the image content\n",
+    "        image_data = response.content\n",
+    "        \n",
+    "        # Determine the file format (PNG or JPEG) based on the 'Content-Type' header\n",
+    "        content_type = response.headers.get('Content-Type', '').lower()\n",
+    "        if 'image/jpeg' in content_type:\n",
+    "            file_extension = 'jpeg'\n",
+    "        elif 'image/png' in content_type:\n",
+    "            file_extension = 'png'\n",
+    "        else:\n",
+    "            print(\"Unknown image format\")\n",
+    "            file_extension = None\n",
+    "        \n",
+    "        if file_extension:\n",
+    "            # Create a PIL Image from the image data\n",
+    "            image = Image.open(BytesIO(image_data))\n",
+    "\n",
+    "            # Define the full path for saving the image inside the \"images\" folder\n",
+    "            image_filename = os.path.join(folder_path, img_name+'.'+ file_extension)\n",
+    "            \n",
+    "            # Save the image to the specified folder\n",
+    "            image.save(image_filename)\n",
+    "            \n",
+    "            # Save the image to a file with the appropriate extension\n",
+    "            print(\"Image saved as \"+img_name+\".\" + file_extension)\n",
+    "    else:\n",
+    "        print(\"Failed to download image. Status code:\", response.status_code)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "728de45c-5bba-4d2f-b907-c328144ec83a",
    "metadata": {
     "editable": true,
     "slideshow": {
